# PythonEducation

./: .gitignore  Makefile  Name  README.md  constant_file_roots.py  constants.py  pyproject.toml  requirements.txt
Info_Students/: stats.sql
only_dev_/models/: model.py
secrets/secret/very_secret/: secret_key.json
src/: first_quest.md  Знакомство.md
src/1First_level/: first_key.md  test_it.py
src/First_level/: first_key.md  main.py
src/Fourth_level/: fourth_quest.md
src/Second_Level/: main.py  second_quest.md
src/Third_level/: main3.py
test_all/: first_level_test.py
tests/: __init__.py  main.py
