[tool.poetry]
name = "pythoneducation"
version = "0.1.0"
description = "For education purposes"
authors = ["Sergey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
