[tool.poetry]
name = "PythonEducation"
version = "0.1.0"
description = ""
authors = ["Sergey <risefenixpuryfire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
